fix card overflow

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -2,6 +2,8 @@
 .card {
     transition: all 0.25s;
     box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.1);
+
+    overflow: auto;
 }
 
 .icon {
